styles/style.css
/* page */

.page {
  font-family: Inter, sans-serif;
  background: #f4f4f4;
}

/* header */

.header {
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  background: #f4f4f4;
}

.header__container {
  max-width: 1200px;
  min-height: 74px;
  margin: 0 auto;
  padding: 0 18px;
  display: flex;
  align-items: center;
  justify-content: flex-end;
}

.header__nav {}

.header__list {
  margin: 0;
  padding: 0;
  display: flex;
  align-items: center;
  justify-content: center;
  gap: 34px;
  list-style: none;
}

.header__item {}

.header__link {
  font-size: 14px;
  font-weight: 500;
  line-height: 1.29;
  text-decoration: none;
  color: #151515;
  transition: 1s;
}

.header__link:hover {
  color: #ff3d00;
  transition: .3s;
}

/* main */

.main {
  padding: 74px 0 0;
}

/* quote */

.quote {
  max-width: 1200px;
  margin: 0 auto;
  padding: 120px 18px 60px;
  display: flex;
  align-items: center;
  justify-content: center;
  gap: 80px;
}

.quote__image {
  width: 100%;
  max-width: 650px;
  max-height: 460px;
}

.quote__content {
  flex: 1 0 470px;
  align-self: stretch;
  display: flex;
  flex-direction: column;
  align-items: flex-start;
  justify-content: space-between;
}

.quote__text {
  margin: 0;
  font-size: 34px;
  font-weight: 600;
  line-height: 1.29;
  letter-spacing: -.5px;
  color: #151515;
}

.quote__author {}

.quote__author-name {
  margin: 0 0 6px 0;
  font-size: 20px;
  font-weight: 500;
  line-height: 1.6;
  color: #151515;
}

.quote__author-profession {
  margin: 0;
  font-size: 16px;
  font-weight: 400;
  line-height: 1.75;
  color: #222;
  opacity: .7;
}

